--- a/posts/2023-12-19.md
+++ b/posts/2023-12-19.md
@@ -1,49 +1,48 @@
-## Logistics with Recursive SQL
+## Doing Business with Recursive SQL
 
-Let's look at a problem from logistics: computing and then maintaining the most appealing matches between producers and consumers.
+Let's take a look at a fundamental problem in economics, with applications to doing business: matching up producers and consumers of some abstract resource, in a way that appeals to all of the participants.
 
-Producers make things, or supply services, or are otherwise in demand by consumers.
-Consumers take things, or retire services, or are otherwise in demand by producers.
+Imagine we have a set of producers and a set of consumers, each of whom wants to be matched to one member of the opposite type, and each of them have some (not neccesarily shared) preference for the other.
+The problem was initially presented in the language of "stable marriage", but it applies to any pairings where the participants have opinions about those they might be paired with.
+The framing has also been applied to matching hospital residents with hospitals, application clients with server capacity, and in this post hungry engineers and their lunching options.
+You should be able to apply it to a variety of settings, most fruitfully when the matched things come with a rich variety of opinions about each other.
 
-Let's start with the assumption that each producer produces one thing, and each consumer consumes one thing.
-As we'll see, this constraint is not too hard to relax later on, but let's start as simple as possible.
-This constrains our answers: we want to match up producers and consumers, but without oversubscribing either.
-
-Let's also imagine that each producer has a preference for each consumer, and each consumer has a (potentially very different) preference for each producer.
-We not only want to match up producers and consumers, we want the matching to be somehow "good".
-There are many ways to do this, but let's use [stable matching](https://en.wikipedia.org/wiki/Stable_marriage_problem) as the goal: no producer and consumer should want both want to pair up together more than they like the pairing we provide them.
-
-We are now well into "algorithms land", but it turns out Materialize's recursive SQL will work out great here. 
-Let's get going on modeling our data, and building up some queries!
+To spill the beans, there already is an algorithm for [stable matching](https://en.wikipedia.org/wiki/Stable_marriage_problem), and we're just going to implement it in recursive SQL.
+You might not have thought of SQL as a language for *algorithms*, and conventional SQL is certainly very limited in this respect.
+However, recursive SQL can be a great fit, and when it is there's no reason not to just lean on the existing approaches!
 
 ### Stable Matching in SQL
 
 We will work off of a table `prefs` that will store the mutual preferences between pairs of producer and consumer.
-We'll just call producers and consumers `name1` and `name2`, respectively, which isn't very evocative but easier to type.
-We'll also use integer "preferences" where smaller numbers are better; think "which place would this option be" perhaps.
+Not every pair needs to be represented here, and any pairs that are absent will just be taken to be non-viable.
+We'll call producers and consumers by `name1` and `name2`, respectively, which aren't very evocative but are easier to type.
+Each pair will have integer preferences `pref1` and `pref2` for each other, where smaller numbers mean higher preference (imaging them as a ranking).
 
 ```sql
--- Each entry indicates a potential connection between name1 and name2.
+-- Each entry indicates a potential connection between `name1` and `name2`.
 -- Each has a numerical preference for this, where we'll take smaller to be better.
--- The goal is to match up (name1, name2) pairs where each prefers the other over
+-- The goal is to match up `(name1, name2)` pairs where each prefers the other over
 -- any other "stable" pairing (someone else who likes them back enough not to leave).
 CREATE TABLE prefs(name1 TEXT, pref1 INT, name2 TEXT, pref2 INT);
 ```
 
+Our goal is to pull out a subset of `prefs` where each `name1` and `name2` occur at most once.
+Also, we shouldn't leave behind any pairing in which each prefers the other more than the pair they were assigned.
+That second part is where the algorithm comes in.
+
 Of course, we'll want some example preferences to work with.
-We'll go larger later in the post, but let's start with some hungry engineers and some food options.
-Thematically, let's imagine that each human prefers the foods based on their own tastes, and the food options (restaurants) prefer the humans based on their distance (because each's prices don't vary as a function of the human, but the delivery cost does).
+Let's start with some hungry engineers and food options.
+Thematically, let's imagine that each human prefers the foods based on their own unaccountable tastes, and the food options (restaurants) prefer the humans based on their distance (because each's price doesn't vary as a function of the human, but the delivery cost does).
 
 Here's some made up data that will show off what we are trying to do.
 
 ```sql
 -- Imagine people have a preference for foods that idk is based on its price.
 -- Imagine restaurants have a preference for people based on their distance.
--- Imagine an capacity constraint that each restaurant feeds one person.
 INSERT INTO prefs VALUES
-('frank', 4, 'ramen', 1),   -- frank needs food, and ramen likes him best
-('arjun', 1, 'ramen', 3),   -- arjun lovel ramen, but it is unrequited.
-('arjun', 3, 'sushi', 4),   -- arjun can tolerate sushi; they prefer him to nikhil.
+('frank',  4, 'ramen', 1),  -- frank needs food, and ramen likes him best
+('arjun',  1, 'ramen', 3),  -- arjun lovel ramen, but it is unrequited.
+('arjun',  3, 'sushi', 4),  -- arjun can tolerate sushi; they prefer him to nikhil.
 ('nikhil', 1, 'sushi', 5);  -- nikhil is too far away to safely enjoy sushi.
 ```
 
@@ -56,12 +55,12 @@ If we study the data (and the comments) we will find that one stable matching is
 (2 rows)
 ```
 Nikhil doesn't get lunch in this story, which is too bad, but is a demonstration of the constraints: not everyone gets what they want.
-Arjun also doesn't get what he wants, which is ramen, because if he did then the ramen-ya would hit Frank up and they'd do lunch instead.
+Arjun also doesn't get what he wants, which is ramen, because it isn't stable: the ramen-ya would just hit Frank up and they'd do lunch instead.
 It turns out there aren't other stable matchings for this data, but in general there can be many.
 
 How do we arrive at a stable matching?
 Fortunately, way back in 1962, [Gale and Shapley proposed](https://web.archive.org/web/20170925172517/http://www.dtic.mil/get-tr-doc/pdf?AD=AD0251958) an algorithm to do just that.
-In one variant: each producer proposes to satisfy their favorite consumer, each consumer definitively rejects all but the best proposal, and spurned proposers repeat with their next best options, until rejections stop or they run out of options.
+In one variant: each producer proposes to satisfy their favorite consumer, each consumer definitively rejects all but the best proposal, and spurned proposers repeat with their next best options, until the rejections stop or they run out of options.
 
 It's pretty much recursion, isn't it? 
 And moreover, each of the steps are pretty easy SQL.
@@ -76,13 +75,13 @@ WITH MUTUALLY RECURSIVE
         EXCEPT ALL
         SELECT * FROM rejects
     ),
-    -- Each `name1` "proposes" to its favorite-est `name2`.
+    -- Each `name1` proposes to its favorite-est `name2`.
     proposals(name1 TEXT, pref1 INT, name2 TEXT, pref2 INT) AS (
         SELECT DISTINCT ON (name1) *
         FROM active
         ORDER BY name1, pref1, name2, pref2
     ),
-    -- Each `name2` tentatively "accepts" the proposal from its favorite-est `name1`
+    -- Each `name2` tentatively accepts the proposal from its favorite-est `name1`
     tentative(name1 TEXT, pref1 INT, name2 TEXT, pref2 INT) AS (
         SELECT DISTINCT ON (name2) *
         FROM proposals
@@ -105,7 +104,6 @@ The behavior of the `WITH MUTUALLY RECURSIVE` block is to evaluate each term in 
 It's worth a moment reading and maybe re-reading the SQL to convince yourself that there is at least some relationship to the written plan.
 
 If we run the query, we get the result up above.
-
 ```
  name1 | pref1 | name2 | pref2 
 -------+-------+-------+-------
@@ -114,17 +112,17 @@ If we run the query, we get the result up above.
 (2 rows)
 ```
 
-Of course, we could also `SUBSCRIBE` to the query, and then modify the input.
-Let's do that, where we introduce the possibility that Frank would happily eat a sandwich instead.
+These results are great to see, but we are here to *maintain* computation, as input data change.
+We can also [`SUBSCRIBE`](https://materialize.com/docs/sql/subscribe/) to the query, and then modify the input to see some output changes.
 
-The snapshot we start with is just the answer up above, which is what we expect.
+Each subscribe starts with a snapshot, and it should be (and is) the answer just up above.
 ```
 1702997600437	 1	arjun	3	sushi	4
 1702997600437	 1	frank	4	ramen	1
 ```
 To remind you, or introduce you, `SUBSCRIBE` produces output whose first column is the timestamp of some update event, followed by a change in count (here `1` for both records), followed by payload columns matching what you'd see from a `SELECT` query.
 
-At this point, we'll introduce this new sandwich opportunity, and see what happens
+At this point, let's introduce the possibility that Frank would happily eat a sandwich instead of ramen.
 ```
 materialize=> insert into prefs values ('frank', 2, 'sando', 3);
 ```
@@ -147,7 +145,7 @@ Neither producer nor consumer will be over-committed, even for a moment, on acco
 
 ### Generalizing Stable Matching
 
-Let's imagine that each producer and consumer have a "capacity": a number of matchings they are able to participate in.
+Let's imagine that each restaurant can serve more than one person, and instead has an integer "capacity".
 What do we need to change about our process?
 Let's introduce tables `producer_capacity` and `consumer_capacity`, which each hold a name and an integer capacity.
 
@@ -159,7 +157,7 @@ CREATE TABLE consumer_capacity(name TEXT, cap INT);
 
 What we need to tweak about the algorithm is that each producer proposes at their top `cap` opportunities, and each consumer tentatively accepts their top `cap` proposals.
 
-Where above we have fragments that look like so, to pick the top-one opportunity,
+Where above we have fragments that look like so, to pick the top singular opportunity,
 ```sql
     -- Each `name1` "proposes" to its favorite-est `name2`.
     proposals(name1 TEXT, pref1 INT, name2 TEXT, pref2 INT) AS (
@@ -172,19 +170,19 @@ we'll want to update these to pick the top `cap` opportunities:
 ```sql
     -- Each `name1` "proposes" to its `cap` favorite-est `name2`.
     proposals(name1 TEXT, pref1 INT, name2 TEXT, pref2 INT) AS (
-        SELECT FROM producer_capacity, 
+        SELECT lat.* FROM producer_capacity, 
         LATERAL (
             -- pick out the best `cap` opportunities
             SELECT * FROM active
             WHERE active.name1 = producer_capacity.name
             ORDER BY active.pref1
             LIMIT producer_capacity.cap
-        )
+        ) lat
     ),
 ```
-This is a bit more complicated, but the `LATERAL` join allows us to invoke `LIMIT producer_capacity.cap` rather than a limit by one that `DISTINCT ON` allows.
+This new SQL is a bit more complicated than the old SQL, but the `LATERAL` join allows us to invoke `LIMIT` with an argument that depends on `cap` rather than a limit of exactly one that `DISTINCT ON` provides.
 
-We'll need to do the same thing for our `tentative` accepts, using `consumer_capacity`.
+We'll need to do the same thing for our tentative accepts, using `consumer_capacity`.
 ```sql
     -- Each `name2` tentatively "accepts" the proposal from its favorite-est `name1`
     tentative(name1 TEXT, pref1 INT, name2 TEXT, pref2 INT) AS (
@@ -205,7 +203,7 @@ However, let's introduce Nikhil to ramen, which it turns out he likes.
 materialize=> insert into prefs values ('nikhil', 1, 'ramen', 2);
 ```
 This has some immediate consequences for our subscription to the matching.
-I have to admit, I restarted it because I wanted to pick up the new query with capacities, but the new snapshot put us right back where we were before.
+I restarted it because we need to pick up the new query with capacities, but the new snapshot put us right back where we were before.
 ```
 1703011622743	-1	arjun	1	ramen	3
 1703011622743	 1	arjun	3	sushi	4
@@ -213,8 +211,7 @@ I have to admit, I restarted it because I wanted to pick up the new query with c
 1703011622743	-1	nikhil	1	sushi	5
 ```
 This dislodges Arjun, who is now back on the sushi plan, because the ramen folks are fully occupied. 
-But only because they are occupied
-
+But only because they are occupied.
 Let's update their capacity to two, which should give Arjun a seat.
 ```
 materialize=> update consumer_capacity set cap = 2 where name = 'ramen';
@@ -248,8 +245,12 @@ materialize=> update prefs set pref2 = 1 where name1 = 'arjun' and name2 = 'rame
 ```
 And Arjun is back on ramen and Nikhil is back on sushi.
 
-### Recursive SQL and Logistics
+### Recursive SQL and Doing Business
 
-We've seen an example of using SQL for one problem that shows up in logistics: stable matching (with capacities).
-This certainly isn't the only problem in logistics, nor even the most significant, but it is potentially a new use of SQL to solve the problem.
-In particular, I hope this was eye-opening about the potential uses of recursive SQL beyond "graph reachability".
+There are lots of changes the input may experience, many of which lead to changed output.
+Like in life, the world changes around you and you may need to promptly update your plans for the world.
+Materialize and recursive SQL are here to make sure you are always looking at the correct output, moment by moment.
+
+We've seen an example of using SQL for one problem that is fundamental in economics: stable matching (with capacities).
+This certainly isn't the only problem in economics, nor even the most significant business problem you'll have, but it does show off a potentially new use of recursive SQL to solve the problem.
+Other problems, similar and different, have natural solutions with recursive SQL that you might not have imagined, and you wouldn't be able to access with vanilla SQL.
